# tripVote

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README  README.md  cmake_install.cmake  index.md  replace_taxa.py  run_test.py  run_test_cases.sh  run_test_p.py  run_tripVote.py  run_tripVote.sh  run_tripVote_module.py  run_tripVote_noParallel.py  setup.py  tq_distance_matrix.py  tq_distance_to_refs.py  tripVote_bootstrap.py  tripVote_complete_trees.py  tripVote_placement.py  tripVote_root.py
Diameter_cluster/: TreeShrink_cluster.py  diameter_shrinking_plot.py  get_voting_trees.sh  test.sh
Testing/Temporary/: CTestCostData.txt
analyses/Bio_Data/: .Rhistory  collect_results.sh  plot.R  run_analysis.sh
analyses/Bio_Data/1kp/: 1kp-taxonomy.tre  kp_MP.trees  kp_MV.trees  kp_OG.trees  pruned1.tre
analyses/Bio_Data/Frogs/: frogs-taxonomy.tre  frogs.trees  frogs_MP.dmc_pairs  frogs_MP.trees  frogs_MV.dmc_pairs  frogs_MV.trees  frogs_OG.dmc_pairs  frogs_OG.trees  frogs_tripRoot.dmc_pairs  frogs_tripRoot.trees  pruned1.tre  pruned1_final.tre  pruned2_final.tre
analyses/Bio_Data/Insects/: is_tripRoot.trees  pruned1.tre  pruned1_final.tre
analyses/Bio_Data/Xencan/: pruned1.tre  pruned1_final.tre  pruned2_final.tre  xencan-taxonomy.tre  xencan.trees  xencan_MP.dmc_pairs  xencan_MP.trees  xencan_MV.dmc_pairs  xencan_MV.trees  xencan_OG.dmc_pairs  xencan_OG.trees  xencan_tripRoot.dmc_pairs  xencan_tripRoot.trees
analyses/Bio_Data/Xenrs/: pruned1.tre  pruned1_final.tre  pruned2_final.tre  xenres-taxonomy.tre  xenrs.trees  xenrs_MP.dmc_pairs  xenrs_MP.trees  xenrs_MV.dmc_pairs  xenrs_MV.trees  xenrs_OG.dmc_pairs  xenrs_OG.trees  xenrs_tripRoot.dmc_pairs  xenrs_tripRoot.trees
analyses/Bio_Data/is/: is-taxonomy.tre  is_tripRoot.trees  pruned2.tre  pruned2_final.tre
analyses/Bio_Data/kp/: kp_tripRoot.trees  pruned2.tre
expected_triplets/: compute_expected_triplets.py  compute_expected_triplets_buggy.py  dtrpl.txt  parameter.log.info  s_tree.trees  truegenetrees
test_cases/: MV.trees  OG.trees  incomplete.trees  input.tree  refTrees.trees  unrooted.trees
tqDist/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  MANIFEST  Makefile  QuartetDistanceCalculator.cpp  QuartetDistanceCalculator.h  RootedTree.cpp  TemplatedStack.cpp  TripletDistanceCalculator.cpp  TripletDistanceCalculator.h  TripletRooting.cpp  TripletRooting.h  all_pairs_quartet_distance.cpp  all_pairs_triplet_distance.cpp  cmake_install.cmake  compute_t2q_score.cpp  matrix_quartet_dist_to_ref.cpp  quartet_dist_to_ref.cpp  rooted_tree.h  setup.py  templated_stack.h  test_quartet.cpp  test_triplet.cpp  test_triplet_root.cpp  tqdistmodule.cpp  triplet_dist_to_ref.cpp  triplet_root_naive.cpp
trees/: 1kp-taxonomy_pruned.tre  1kp-taxonomy_pruned1.tre  1kp-taxonomy_pruned673.tre  1kp-taxonomy_pruned852.tre  astral.MR.tre  clsp2.tre  clsp3.tre  eightLeaves.tre  estimatedgenetre.gtr_OG  estimatedgenetre.gtr_tripRoot  fourLeaves.tre  fourLeaves_2.tre  kp_tripRoot.trees  kp_tripRoot_tree852.tre  pruned.tre  pruned1_final.tre  pruned2_final.tre  sixLeaves.tre  taxonomy.tre  temp  temp.tre  temp1
tripRoot/: CMakeLists.txt  CTestTestfile.cmake  CountingArray.cpp  HDT.cpp  HDTCountingCCToC.cpp  HDTCountingCTransform.cpp  HDTCountingG.cpp  HDTCountingIGToC.cpp  HDTCountingLeaf.cpp  HDTFactory.cpp  MVRooting.cpp  MVRooting.h  MV_rooting.cpp  Makefile  MinVarCounter.cpp  MinVarCounter.h  OutgroupRooting.cpp  OutgroupRooting.h  RefTreeGen.cpp  RefTreeGen.h  RootedTree.cpp  RootedTreeFactory.cpp  Tree.cpp  TripletCounter.cpp  TripletCounter.h  TripletRooting.cpp  TripletRooting.h  TripletRooting_OG.cpp  TripletRooting_OG.h  TrplMVRooting.cpp  TrplMVRooting.h  cmake_install.cmake  collapse_tree.cpp  counting_array.h  delta_triplet_distance.cpp  hdt.h  hdt_factory.h  outgroup_rooting.cpp  pairs_triplet_MV_rooting.cpp  prune_tree.cpp  (+20 more)
tripRoot/Testing/Temporary/: CTestCostData.txt
tripVote/: __init__.py  placement_lib.py  tripvote_lib.py  utils.py
tripletRooting/: CountingArray.cpp  HDT.cpp  HDTCountingCCToC.cpp  HDTCountingCTransform.cpp  HDTCountingG.cpp  HDTCountingIGToC.cpp  HDTCountingLeaf.cpp  RootedTree_lb.cpp  TripletCounter.cpp  TripletCounter.h  TripletRooting.cpp  TripletRooting.h  counting_array.h  counting_linked_list.h  hdt.h
util_scripts/: collapse_by_level.py  collapse_by_portion.py  collapse_level_maxTrpl_score.py  collapse_maxTrpl_bruteforce.py  collapse_maxTrpl_score.py  collapse_oneBr_bruteforce.py  compute_expected_triplets.py  edge_collapsing_lib.py  labelTrees.py  optimal_level_tripRoot.sh  optimal_tripMVRoot.sh  optimal_tripRoot.sh  random_reroot.sh  random_reroot_multi.sh  reroot.py  reroot_frogs.sh  tripRoot.dtrpl.txt  triplet_root_naive.sh
util_scripts/Tests/test_expected_triplets/: run_test.sh
util_scripts/Tests/test_expected_triplets/Test1/: after_collapsed.txt  before_collapsed.txt  populationSize.txt  s_tree.trees  s_tree_clps.tre
util_scripts/Tests/test_expected_triplets/Test2/: dtrpl_after.txt  dtrpl_before.txt  populationSize.txt  s_tree.trees  s_tree_clps.trees  truegenetrees
util_scripts/Tests/test_expected_triplets/Test3/: dtrpl_after.txt  dtrpl_before.txt  populationSize.txt  s_tree.trees  s_tree_clps.trees  truegenetrees
util_scripts/Tests/test_expected_triplets/Test4/: dtrpl_after.txt  dtrpl_before.txt  populationSize.txt  s_tree.trees  s_tree_clps.trees  truegenetrees
util_scripts/Tests/test_expected_triplets/Test5/: dtrpl_after.txt  dtrpl_before.txt  populationSize.txt  s_tree.trees  s_tree_clps.trees  truegenetrees
util_scripts/Tests/test_expected_triplets/Test6/: dtrpl_after.txt  dtrpl_before.txt  info.txt  populationSize.txt  s_tree.trees  s_tree_clps.trees  s_tree_clpsOne.trees
util_scripts/trees/: s_tree.lb.trees  s_tree.trees
